--- a/index.css
+++ b/index.css
@@ -1,5 +1,243 @@
+@font-face {
+	font-family: 'Kano';
+	src: url('Kano-regular.eot');
+	src: url('Kano-regular.eot?#iefix') format('embedded-opentype'),
+		url('Kano-regular.woff2') format('woff2'),
+		url('Kano-regular.woff') format('woff'),
+		url('Kano-regular.ttf') format('truetype');
+	font-weight: normal;
+	font-style: normal;
+}
+
 html, body {
+  font-family: 'Kano', sans-serif;
   font-size: 16px;
   -webkit-font-smoothing: antialiased;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+html {
+  height: 100%;
+}
+
+body {
+  min-height: 100%;
+  margin: 0 1rem;
+  margin-top: 1rem;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
+.footer {
+  padding: 20px;
+}
+/* NAVIGATION */
+.nav-background {
+  position: fixed;
+  top: 0;
+  z-index: 9000;
+  width: 100%;
+  background-color: white;
+  border-bottom: 1px solid #ddd;
+  /*box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.2);*/
+}
+
+.nav-container {
+  display: flex;
+  max-width: 1000px;
+  margin: 0 auto;
+  justify-content: space-between;
+}
+
+.nav-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav-logo {
+  color: #444;
+  text-decoration: none;
+}
+.nav-logo:hover {
+  color: #666;
+}
+
+.nav-ul {
+  display: flex;
+  max-width: 700px;
+}
+
+.nav-ul > li {
+  display: flex;
+}
+
+.nav-link {
+  flex: 1;
+  color: #444;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 1.2rem;
+  transition: 200ms;
+}
+
+.nav-link:hover {
+  background-color: #f1f1f1;
+}
+
+.nav-link:active {
+  color: #1560fb;
+}
+
+.active-link {
+  background-color: #f1f1f1;
+}
+
+/* END NAVIGATION */
+
+
+/* MOBILE MENU */
+@media screen and (max-width: 700px) {
+
+  .nav-container {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .nav-menu-button {
+    padding: 1rem;
+    background-color: #f1f1f1;
+    cursor: pointer;
+  }
+
+  .nav-ul {
+    display: block;
+    flex-direction: column;
+    overflow-y: scroll;
+    direction: rtl;
+    max-height: 80vh;
+  }
+
+  .hide-ul {
+    max-height: 0vh;
+  }
+
+  .nav-link {
+    padding: 1rem 0;
+    font-size: 1.3rem;
+    border-bottom: 1px solid #f4f4f4;
+  }
+}
+/* END MOBILE MENU */
+
+/* DESKTOP MENU */
+@media screen and (min-width: 701px) {
+
+  .nav-menu-button {
+    display: none;
+  }
+
+  .nav-link {
+    padding: 1rem 1.5rem;
+  }
+}
+
+/* This moves the logo so that it's not touching the left side */
+@media screen and (max-width: 1040px) {
+  .nav-logo {
+    margin-left: 1rem;
+  }
+}
+
+/*PROJECTS PAGE*/
+.gallery {
+  display: flex;
+  justify-content: space-between;
+}
+
+
+/*HOVER EFFECT ON PROJECTS GALLERY*/
+.hovereffect {
+  width: 100%;
+  height: 100%;
+  float: left;
+  overflow: hidden;
+  position: relative;
+  text-align: center;
+  cursor: default;
+}
+
+.hovereffect .overlay {
+  position: absolute;
+  overflow: hidden;
+  width: 80%;
+  height: 80%;
+  left: 10%;
+  top: 10%;
+  border-bottom: 1px solid #FFF;
+  border-top: 1px solid #FFF;
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: scale(0,1);
+  -ms-transform: scale(0,1);
+  transform: scale(0,1);
+}
+
+.hovereffect:hover .overlay {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+}
+
+.hovereffect img {
+  display: block;
+  position: relative;
+  -webkit-transition: all 0.35s;
+  transition: all 0.35s;
+}
+
+.hovereffect:hover img {
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feComponentTransfer color-interpolation-filters="sRGB"><feFuncR type="linear" slope="0.6" /><feFuncG type="linear" slope="0.6" /><feFuncB type="linear" slope="0.6" /></feComponentTransfer></filter></svg>#filter');
+  filter: brightness(0.6);
+  -webkit-filter: brightness(0.6);
+}
+
+.hovereffect h2 {
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  font-size: 17px;
+  background-color: transparent;
+  color: #FFF;
+  padding: 1em 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0,-100%,0);
+  transform: translate3d(0,-100%,0);
+}
+
+.hovereffect a, hovereffect p {
+  color: #FFF;
+  padding: 1em 0;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+  transition: opacity 0.35s, transform 0.35s;
+  -webkit-transform: translate3d(0,100%,0);
+  transform: translate3d(0,100%,0);
+}
+
+.hovereffect:hover a, .hovereffect:hover p, .hovereffect:hover h2 {
+  opacity: 1;
+  filter: alpha(opacity=100);
+  -webkit-transform: translate3d(0,0,0);
+  transform: translate3d(0,0,0);
 }
