--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@ body {
 .about-facts-box {
 	border: 1px solid #FF3D2E;
 	margin: 0 0.5rem 1rem auto;
-	width: 400px;
+	width: 350px;
 	max-width: 100%;
 }
 
@@ -180,7 +180,7 @@ body {
 }
 
 .mywork-social-links:hover {
-	color: #D9EAEF;
+	color: #373a3c;
 	transition: ease 0.3s;
 }
 
@@ -209,14 +209,59 @@ body {
 	font-size: 2rem;
 	font-family: 'Bilius';
 	margin: 1rem;
-	color: #FF3D2E;
+	color: #373a3c;
 	text-align: center;
 	display: block;
 }
 
 .contact-email:hover {
 	text-decoration: none;
-	color: #373a3c;
+	color: #D9EAEF;
+}
+
+/*CONTACT CARD FLIP*/
+/* entire container, keeps perspective */
+.flip-container {
+	perspective: 1000px;
+}
+	/* flip the pane when hovered */
+	.flip-container:hover .flipper, .flip-container.hover .flipper {
+		transform: rotateY(180deg);
+	}
+
+.flip-container, .card-front, .card-back {
+	width: 100%;
+	height: 75px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.6s;
+	transform-style: preserve-3d;
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.card-front, .card-back {
+	backface-visibility: hidden;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.card-front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+	text-align: center;
+	font-size: 2rem;
+}
+
+/* back, initially hidden pane */
+.card-back {
+	transform: rotateY(180deg);
+	background-color: #FF3D2E;
 }
 
 /*HOVEREFFECT*/
@@ -309,6 +354,8 @@ body {
   transform: translate3d(0,0,0);
 }
 
+/*MEDIA QUERIES*/
+
 @media (min-width: 576px) {
 	.hovereffect {
 		width: 450px;
@@ -317,7 +364,7 @@ body {
 
 @media (min-width: 768px) {
 	html, body {
-		font-size: 18px;
+		font-size: 20px;
 	}
 
 	.hover-row{
