--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'Oxygen';
-	src: url('../fonts/Oxygen/Oxygen.eot');
-	src: url('../fonts/Oxygen/Oxygen.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Oxygen/Oxygen.woff2') format('woff2'),
-		url('../fonts/Oxygen/Oxygen.woff') format('woff'),
-		url('../fonts/Oxygen/Oxygen.ttf') format('truetype');
+	src: url('../fonts/Oxygen/Oxygen-Light.eot');
+	src: url('../fonts/Oxygen/Oxygen-Light.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Oxygen/Oxygen-Light.woff2') format('woff2'),
+		url('../fonts/Oxygen/Oxygen-Light.woff') format('woff'),
+		url('../fonts/Oxygen/Oxygen-Light.ttf') format('truetype');
 	font-style: normal;
 }
 
@@ -37,8 +37,9 @@ html, body {
 }
 
 body {
-  background-image: url('../assets/dark_fish_skin_@2X.png');
-	background-repeat: repeat;
+	background-color:  #fcfcfc;
+  /*background-image: url('../assets/dark_fish_skin_@2X.png');
+	background-repeat: repeat;*/
 	padding-top: 78px;
 }
 
@@ -70,8 +71,15 @@ a:hover {
 	text-decoration: none;
 }
 
+.center {
+	margin: 0 auto;
+}
+
 .navbar {
 	background-color: #D9EAEF;
+	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
 }
 
 .navbar-right {
@@ -84,13 +92,14 @@ a:hover {
 
 .nav-item:hover {
 	opacity: 1;
-  filter: alpha(opacity=100);
+  filter: alpha(opacity=80);
   -webkit-transform: translate3d(0,0,0);
   transform: translate3d(0,0,0);
-	transition: 0.35s;
+	transition: 0.45s;
 	font-family: 'Oxygen';
 	font-weight: bold;
-	border-bottom: 2px solid #ff3d2e;
+	border: none;
+	border-bottom: 2px solid #FF3D2E;
 }
 
 .nav-link {
@@ -115,28 +124,48 @@ a:hover {
   margin: 1rem auto;
 }
 
+.headshot {
+	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+}
+
 .social-group {
 	margin: 1rem auto;
 	text-align: center;
 }
 
-.heading-social-links {
-	font-size: 2.5rem;
+.social-links {
+	font-size: 2rem;
+	text-shadow: rgba(45, 45, 45, 0.65) 1px 1px 4px;
+	color: #FF3D2E;
+}
+
+.social-links:hover {
+	color: #090909;
+	transition: ease 0.3s;
 }
 
 .heading-social-button {
 	font-size: 2rem;
-	color: #D9EAEF;
+	color: #FF3D2E;
 }
 
 .heading-social-button:hover {
-	color: #FF3D2E;
+	color: #090909;
 	transition: ease 0.3s;
+}
+
+.intro-content {
+	padding: 0;
 }
 
 .intro-box {
 	background-color: #D9EAEF;
 	border-radius: 2px;
+	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
 }
 
 .intro-title {
@@ -144,7 +173,6 @@ a:hover {
 }
 
 .intro-text {
-	text-align: center;
 	margin: 0 auto;
 }
 
@@ -163,6 +191,9 @@ a:hover {
 	background-color: #fafafa;
 	border-radius: 2px;
 	padding-bottom: 1rem;
+	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
 }
 
 /*.side-image {
@@ -195,6 +226,9 @@ a:hover {
 	margin: 1rem auto;
 	background-color: #D9EAEF;
 	border-radius: 2px;
+	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
 }
 
 .hover-row {
@@ -223,6 +257,9 @@ a:hover {
 	margin: 1rem auto;
 	background-color: #fafafa;
 	border-radius: 2px;
+	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
 }
 
 .embedly-card {
@@ -306,9 +343,12 @@ a:hover {
 .footer {
 	margin: 1rem auto;
 	padding: 1rem;
-	background-color: #fafafa;
+	background-color: #D9EAEF;
 	border-radius: 2px;
 	text-align: center;
+	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
 }
 
 .footer-social-group {
@@ -442,5 +482,9 @@ a:hover {
 		width: 1000px;
 		margin: 0 auto;
 		max-width: 100%;
+	}
+
+	.intro-box {
+		height: 400px;
 	}
 }
