--- a/src/index.css
+++ b/src/index.css
@@ -38,317 +38,20 @@ html, body {
 
 body {
 	background-color:  #fcfcfc;
-  /*background-image: url('../assets/dark_fish_skin_@2X.png');
-	background-repeat: repeat;*/
-	padding-top: 78px;
 }
 
-#about:before{
-	display: block;
-	content: '';
-	margin-top: -75px;
-	height: 75px;
-	visibility: hidden;
-}
-#mywork:before{
-	display: block;
-	content: '';
-	margin-top: -75px;
-	height: 75px;
-	visibility: hidden;
-}
-#blog:before{
-	display: block;
-	content: '';
-	margin-top: -75px;
-	height: 75px;
-	visibility: hidden;
-}
-a {
-	text-decoration: none;
-}
-a:hover {
-	text-decoration: none;
+.main {
+	height: 100vh;
+	display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
-.center {
-	margin: 0 auto;
-}
-
-.navbar {
-	background-color: #D9EAEF;
-	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-}
-
-.navbar-right {
-	float: right;
-}
-
-.nav-item {
-	border-bottom: 2px solid #D9EAEF;
-}
-
-.nav-item:hover {
-	opacity: 1;
-  filter: alpha(opacity=80);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-	transition: 0.45s;
-	font-family: 'Oxygen';
-	font-weight: bold;
-	border: none;
-	border-bottom: 2px solid #FF3D2E;
-}
-
-.nav-link {
-	font-size: 1.4rem;
-}
-
-.title {
-	font-family: 'Bilius';
-}
-
-.navbar {
-	border-radius: 0;
-	background-color: #fff;
-}
-
-.navbar-toggler {
-	color: #393939;
-}
-
-.heading {
-  max-width: 300px;
-  margin: 1rem auto;
-}
-
-.headshot {
-	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-}
-
-.social-group {
-	margin: 1rem auto;
-	text-align: center;
-}
-
-.social-links {
-	font-size: 2rem;
-	text-shadow: rgba(45, 45, 45, 0.65) 1px 1px 4px;
-	color: #FF3D2E;
-}
-
-.social-links:hover {
-	color: #090909;
-	transition: ease 0.3s;
-}
-
-.heading-social-button {
-	font-size: 2rem;
-	color: #FF3D2E;
-}
-
-.heading-social-button:hover {
-	color: #090909;
-	transition: ease 0.3s;
-}
-
-.intro-content {
-	padding: 0;
-}
-
-.intro-box {
-	background-color: #D9EAEF;
-	border-radius: 2px;
-	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-}
-
-.intro-title {
-	text-align: center;
-}
-
-.intro-text {
-	margin: 0 auto;
-}
-
-.title {
-	padding: 1rem 1rem 0;
-}
-
-.text {
-	padding: 1rem;
-	width: 600px;
-	max-width: 100%;
-}
-
-.about-box {
-	margin: 1rem auto;
-	background-color: #fafafa;
-	border-radius: 2px;
-	padding-bottom: 1rem;
-	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-}
-
-/*.side-image {
-	max-width: 400px;
-}*/
-
-.about-title, .mywork-title, .blog-title, .contact-title {
-	font-family: 'Oxygen';
-	font-weight: bold;
-}
-
-.about-facts-box {
-	margin: 0 0.5rem 1rem auto;
-	width: 350px;
-	max-width: 100%;
-}
-
-.about-facts-title {
-	text-align: right;
-	padding: 0;
-}
-
-.about-facts-text {
-	list-style: none;
-	text-align: right;
-	padding: 0;
-}
-
-.mywork-box {
-	margin: 1rem auto;
-	background-color: #D9EAEF;
-	border-radius: 2px;
-	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-}
-
-.hover-row {
-	padding: 1rem;
-}
-
-.mywork-social-links {
-	font-size: 2rem;
-	color: #FF3D2E;
-}
-
-.mywork-social-links:visited {
-	color: #FF3D2E;
-}
-
-.mywork-social-links:hover {
-	color: #373a3c;
-	transition: ease 0.3s;
-}
-
-.mywork-text {
-	text-align: center;
-}
-
-.blog-box {
-	margin: 1rem auto;
-	background-color: #fafafa;
-	border-radius: 2px;
-	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-}
-
-.embedly-card {
-	padding: 1rem;
-}
-
-.contact-box {
-	background-color: #D9EAEF;
-	margin: 1rem auto;
-  padding-bottom: 1rem;
-	border-radius: 2px;
-}
-
-.contact-email {
-	font-size: 2rem;
-	font-family: 'Bilius';
-	margin: 1rem;
-	color: #373a3c;
-	text-align: center;
-	display: block;
-}
-
-.contact-email:hover {
-	text-decoration: none;
-	color: #D9EAEF;
-}
-
-/*SKILLS CONTAINER*/
-#container {
-  margin: 20px;
-  width: 200px;
-  height: 100px;
-}
-
-/*CONTACT CARD FLIP*/
-/* entire container, keeps perspective */
-.flip-container {
-	perspective: 1000px;
-}
-	/* flip the pane when hovered */
-	.flip-container:hover .flipper, .flip-container.hover .flipper {
-		transform: rotateY(180deg);
-	}
-
-.flip-container, .card-front, .card-back {
-	width: 100%;
-	height: 80px;
-}
-
-/* flip speed goes here */
-.flipper {
-	transition: 0.6s;
-	transform-style: preserve-3d;
-	position: relative;
-}
-
-/* hide back of pane during swap */
-.card-front, .card-back {
-	backface-visibility: hidden;
-	position: absolute;
-	top: 0;
-	left: 0;
-}
-
-/* front pane, placed above back */
-.card-front {
-	z-index: 2;
-	/* for firefox 31 */
-	transform: rotateY(0deg);
-	text-align: center;
-	font-size: 2rem;
-}
-
-/* back, initially hidden pane */
-.card-back {
-	transform: rotateY(180deg);
-	background-color: #FF3D2E;
-}
-
-/*FOOTER*/
 .footer {
-	margin: 1rem auto;
-	padding: 1rem;
-	background-color: #D9EAEF;
-	border-radius: 2px;
-	text-align: center;
-	-webkit-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	-moz-box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
-	box-shadow: 4px 2px 17px 0px rgba(57,57,57,0.63);
+	position: absolute;
+	bottom: 0;
+	align-self: center;
 }
 
 .footer-social-group {
@@ -373,97 +76,6 @@ a:hover {
 	transition: ease 0.3s;
 }
 
-
-
-/*HOVEREFFECT*/
-.hovereffect {
-	width: 500px;
-  max-width: 100%;
-	height: 100%;
-  float: left;
-  overflow: hidden;
-  position: relative;
-  text-align: center;
-  cursor: default;
-	margin: 1rem 0.5rem;
-	display: inline-block;
-}
-
-.hovereffect .overlay {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  overflow: hidden;
-  top: 0;
-  left: 0;
-  padding: 50px 20px;
-}
-
-.hovereffect img {
-  display: block;
-  position: relative;
-  max-width: none;
-  width: calc(100% + 20px);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(-10px,0,0);
-  transform: translate3d(-10px,0,0);
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-}
-
-.hovereffect:hover img {
-  opacity: 0.4;
-  filter: alpha(opacity=40);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
-
-.hovereffect h2 {
-  text-transform: uppercase;
-  color: #FF3D2E;
-  text-align: center;
-  position: relative;
-  font-size: 18px;
-  overflow: hidden;
-  padding: 1rem 0;
-  background-color: transparent;
-}
-
-.hovereffect h2:after {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background: #FF3D2E;
-  content: '';
-  -webkit-transition: -webkit-transform 0.35s;
-  transition: transform 0.35s;
-  -webkit-transform: translate3d(-100%,0,0);
-  transform: translate3d(-100%,0,0);
-}
-
-.hovereffect:hover h2:after {
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
-
-.hovereffect a, .hovereffect p {
-  opacity: 0;
-  filter: alpha(opacity=0);
-  -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
-  transition: opacity 0.35s, transform 0.35s;
-  -webkit-transform: translate3d(100%,0,0);
-  transform: translate3d(100%,0,0);
-}
-
-.hovereffect:hover a, .hovereffect:hover p {
-	opacity: 1;
-  filter: alpha(opacity=100);
-  -webkit-transform: translate3d(0,0,0);
-  transform: translate3d(0,0,0);
-}
 
 /*MEDIA QUERIES*/
 
