--- a/src/index.css
+++ b/src/index.css
@@ -44,13 +44,20 @@ body {
 	height: 100vh;
 	display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+	align-items: flex-end;
+  justify-content: space-around;
+	margin: 1rem;
+}
+
+#countdown {
+	font-size: 2em;
+	color: #FF3D2E;
+	font-weight: bolder;
 }
 
 .footer {
 	position: absolute;
-	bottom: 0;
+	bottom: 10px;
 	align-self: center;
 }
 
