--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,13 @@
 @font-face {
+	font-family: 'Devicons';
+	src: url('../fonts/devicons/devicons.eot');
+	src: url('../fonts/devicons/devicons.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/devicons/devicons.woff') format('woff'),
+		url('../fonts/devicons/devicons.ttf') format('truetype');
+	font-style: normal;
+}
+
+@font-face {
 	font-family: 'Oxygen';
 	src: url('../fonts/Oxygen/Oxygen-Light.eot');
 	src: url('../fonts/Oxygen/Oxygen-Light.eot?#iefix') format('embedded-opentype'),
@@ -37,28 +46,132 @@ html, body {
 }
 
 body {
-	background-color:  #fcfcfc;
+	background-color:  #B3E4DB;
+}
+
+nav {
+	background-color: #343844;
+	border-bottom: #1B76B6 3px solid;
+	-webkit-box-shadow: 0px 1px 6px 0px rgba(52,56,68,1);
+	-moz-box-shadow: 0px 1px 6px 0px rgba(52,56,68,1);
+	box-shadow: 0px 1px 6px 0px rgba(52,56,68,1);
+}
+
+.navbar-brand, .navbar-brand:visited {
+	font-family: 'Bilius';
+	color: #EFFF3B;
+}
+
+.navbar-brand:hover {
+	font-family: 'Bilius';
+	color: #EFFF3B;
+}
+
+.custom-toggler.navbar-toggler {
+    border-color: rgba(255,255,255, 1);
+}
+.custom-toggler .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}
+
+.collapse {
+	justify-content: center;
+	color: #fafafa;
+}
+
+.links {
+	color: #fafafa;
+	border-top: solid 2px transparent;
+}
+
+.links:hover {
+	color: #EFFF3B;
+	font-weight: bold;
+	border-top: solid 2px #EFFF3B;
+	transition: ease 0.5s;
 }
 
 .main {
-	height: 100vh;
-	display: flex;
-  flex-direction: column;
-	align-items: flex-end;
-  justify-content: space-around;
-	margin: 1rem;
+	padding: 70px 0 0 0;
 }
 
-#countdown {
+
+.anchors {
+	padding-top: 80px;
+	margin-top: -80px;
+}
+.name {
+	font-family: 'Bilius';
+	text-align: right;
+}
+
+.intro-text {
+  visibility: visible;
+	text-align: right;
+	font-size: 1.25em;
+}
+
+.intro-text-large {
+	display: none;
+}
+
+
+.service-box i {
+  margin-bottom: 20px;
+	width: 100px;
+}
+.devicons {
+  font-family: 'devicons';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  -webkit-font-feature-settings: normal;
+  font-feature-settings: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+.fa-4x {
+  font-size: 4em;
+}
+.bounceIn {
+  -webkit-animation-name: bounceIn;
+  animation-name: bounceIn;
+}
+
+.portfolio-items-wrapper {
+	display: flex;
+  flex-wrap: wrap;
+	align-items: stretch;
+  justify-content: center;
+}
+
+.portfolio-item {
+	background: white;
+  margin: 1rem;
+	border-radius: 3px;
+	padding: 1rem;
+	display: flex;
+flex-direction: column;
+justify-content: space-around;
+}
+
+.portfolio-links {
+	color: black;
 	font-size: 2em;
-	color: #FF3D2E;
-	font-weight: bolder;
 }
 
 .footer {
-	position: absolute;
-	bottom: 10px;
+	width: 100%;
+  bottom: 0;
+  left: 0;
 	align-self: center;
+	margin-top: 2rem;
+	background-color: #343844;
+	border-top: #1B76B6 3px solid;
+	color: #fafafa;
 }
 
 .footer-social-group {
@@ -75,35 +188,74 @@ body {
 
 .footer-social-button {
 	font-size: 2rem;
-	color: #FF3D2E;
+	color: #fafafa;
 }
 
 .footer-social-button:hover {
-	color: #353535;
+	color: #EFFF3B;
 	transition: ease 0.3s;
 }
 
 
 /*MEDIA QUERIES*/
+/*Extra small devices (portrait phones, less than 576px)
+No media query since this is the default in Bootstrap*/
 
+/*Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) {
-	.hovereffect {
-		width: 450px;
-	}
-}
 
+
+ }
+
+/*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) {
-	html, body {
-		font-size: 18px;
+
+ }
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+	body {
+		background-color: #fff;
+	  background-image: url("../assets/jenessa-bg.png");
+		background-repeat: no-repeat;
+		background-size: cover;
+	  background-attachment: fixed;
 	}
 
-	.hover-row{
-		width: 1000px;
+	.navbar-brand {
+		display: none;
+	}
+
+	#about, #skills {
+		height: 90vh;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-content: center;
+	}
+
+	.intro-text {
+	  display: none;
+	}
+
+	.intro-text-large {
+	  display: block;
+		text-align: center;
+		font-size: 1.5em;
+		margin-top: 1rem;
+	}
+	.name {
+		text-align: center;
+		font-size: 3em;
+	}
+
+	.short-row {
+		padding-top: 1rem;
 		margin: 0 auto;
-		max-width: 100%;
 	}
+ }
 
-	.intro-box {
-		height: 400px;
-	}
-}
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+
+ }
