--- a/new-site/src/styles/index.css
+++ b/new-site/src/styles/index.css
@@ -6423,7 +6423,8 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Muli", sans-serif;
-  background: #F9F9F9; }
+  background: #F9F9F9;
+  color: #070102; }
 
 nav {
   position: fixed; }
@@ -6433,4 +6434,5 @@ content {
   min-height: 100vh; }
 
 h1, h2, h3, h4, h5 {
-  font-family: "Oswald", sans-serif; }
+  font-family: "Oswald", sans-serif;
+  color: #070102; }
