--- a/new-site/src/styles/_common.scss
+++ b/new-site/src/styles/_common.scss
@@ -3,6 +3,7 @@ body {
   padding: 0;
   font-family: $family-primary;
   background: $white;
+  color: $black;
 }
 
 
@@ -18,4 +19,5 @@ content {
 
 h1, h2, h3, h4, h5 {
   font-family: $oswald;
+  color: $black;
 }
