--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6423,16 +6423,240 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Muli", sans-serif;
-  background: #F9F9F9;
+  background: rgba(9, 4, 70, 0.1);
   color: #070102; }
 
-nav {
-  position: fixed; }
+.site-wrap {
+  background: #FDFFFC; }
+  .site-wrap section {
+    background: #FDFFFC; }
 
-content {
-  display: flex;
-  min-height: 100vh; }
-
-h1, h2, h3, h4, h5 {
+h1,
+h2,
+h3,
+h4,
+h5 {
   font-family: "Oswald", sans-serif;
   color: #070102; }
+
+h1 {
+  font-size: 2.5rem; }
+
+h2 {
+  font-size: 2rem; }
+
+h3 {
+  font-size: 1.75rem; }
+
+h4 {
+  font-size: 1.5rem; }
+
+h5 {
+  font-size: 1rem; }
+
+h6 {
+  font-size: 0.75rem; }
+
+.icon-link {
+  color: #FF9F1C;
+  font-size: 1.75rem;
+  margin: 0 0.3125rem;
+  padding: 0.3125rem; }
+  .icon-link:hover {
+    color: #383B53;
+    transition: 300ms ease-in; }
+
+nav.navbar {
+  box-shadow: 0px 0px 1px 0px rgba(56, 59, 83, 0.2);
+  padding: 0.1875rem 1.5rem; }
+  nav.navbar .navbar-brand {
+    align-items: center; }
+    nav.navbar .navbar-brand .navbar-item:hover {
+      background-color: transparent; }
+    nav.navbar .navbar-brand img.logo {
+      max-height: 3rem; }
+    nav.navbar .navbar-brand .navbar-burger:hover {
+      background-color: rgba(255, 159, 28, 0.5); }
+    nav.navbar .navbar-brand .navbar-burger span {
+      height: 2px;
+      background-color: rgba(7, 1, 2, 0.7); }
+  @media screen and (max-width: 1087px) {
+    nav.navbar #navMenu.navbar-menu {
+      background: none;
+      box-shadow: none; } }
+  nav.navbar #navMenu.navbar-menu .navbar-item {
+    color: #090446;
+    font-weight: bold;
+    margin: 5px auto;
+    padding: 10px 0;
+    text-align: center;
+    text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
+    text-transform: uppercase; }
+    nav.navbar #navMenu.navbar-menu .navbar-item::before {
+      position: absolute;
+      top: 0;
+      overflow: hidden;
+      padding: 10px 0;
+      max-width: 0;
+      border-bottom: 2px solid #FF9F1C;
+      color: #FF9F1C;
+      content: attr(data-hover);
+      transition: max-width 0.5s; }
+    nav.navbar #navMenu.navbar-menu .navbar-item:hover,
+    nav.navbar #navMenu.navbar-menu .navbar-item :active {
+      outline: none;
+      background-color: transparent; }
+    nav.navbar #navMenu.navbar-menu .navbar-item:hover::before,
+    nav.navbar #navMenu.navbar-menu .navbar-item :focus::before {
+      max-width: 100%; }
+    @media screen and (min-width: 1087px) {
+      nav.navbar #navMenu.navbar-menu .navbar-item {
+        border-top: 2px solid #090446;
+        margin: 15px 25px; }
+        nav.navbar #navMenu.navbar-menu .navbar-item::before {
+          left: 0; } }
+
+@keyframes pulse {
+  from {
+    transform: scale3d(1, 1, 1); }
+  50% {
+    transform: scale3d(1.05, 1.05, 1.05); }
+  to {
+    transform: scale3d(1, 1, 1); } }
+
+.pulse {
+  animation-name: pulse; }
+
+@keyframes fadeInDown {
+  from {
+    opacity: 0;
+    transform: translate3d(0, -100%, 0); }
+  to {
+    opacity: 1;
+    transform: none; } }
+
+.fadeInDown {
+  animation-name: fadeInDown; }
+
+.pulse {
+  animation-name: pulse; }
+
+.animated {
+  animation-duration: 1s;
+  animation-fill-mode: both; }
+
+.is-blue {
+  background: #090446;
+  color: #FDFFFC; }
+
+.is-seafoam {
+  background: #41EAD4;
+  color: #FDFFFC; }
+
+.is-orange {
+  background: #FF9F1C;
+  color: #070102; }
+
+.is-red {
+  background: #F71735;
+  color: #FDFFFC; }
+
+.is-grey {
+  background: #383B53;
+  color: #FDFFFC; }
+
+.is-white {
+  background: #FDFFFC;
+  color: #070102; }
+
+.is-sticky-top {
+  left: 0;
+  position: sticky;
+  right: 0;
+  top: 0;
+  z-index: 30; }
+
+.hero {
+  margin-top: -35px; }
+  @media screen and (max-width: 600px) {
+    .hero .hero-body {
+      padding: 6rem 1.5rem; } }
+  .hero .hero-body .container {
+    max-width: 900px; }
+
+footer.footer {
+  padding: 3rem 1.5rem; }
+  footer.footer h5 {
+    color: inherit;
+    letter-spacing: 1px;
+    margin-bottom: 0.5rem;
+    text-transform: uppercase; }
+  footer.footer .navbar-menu {
+    justify-content: center; }
+    @media screen and (max-width: 1088px) {
+      footer.footer .navbar-menu {
+        background-color: inherit;
+        display: flex;
+        flex-direction: column; }
+        footer.footer .navbar-menu .navbar-item:hover {
+          background-color: #41EAD4;
+          color: #070102; } }
+    footer.footer .navbar-menu .navbar-item {
+      background: none;
+      border: none;
+      color: inherit;
+      font-weight: bold;
+      letter-spacing: 1px;
+      margin: 0.3125rem 0.625rem;
+      outline: none;
+      padding: 0.625rem 1.25rem;
+      text-transform: uppercase;
+      transition: all 0.3s; }
+      footer.footer .navbar-menu .navbar-item.btn-1 {
+        border: 3px solid #41EAD4;
+        color: #41EAD4;
+        overflow: hidden; }
+        footer.footer .navbar-menu .navbar-item.btn-1:hover {
+          color: #070102; }
+          footer.footer .navbar-menu .navbar-item.btn-1:hover::after {
+            width: 85%;
+            opacity: 1; }
+        footer.footer .navbar-menu .navbar-item.btn-1::after {
+          width: 0;
+          height: 103%;
+          top: 50%;
+          left: 50%;
+          background: #41EAD4;
+          opacity: 0;
+          transform: translateX(-50%) translateY(-50%);
+          content: '';
+          position: absolute;
+          z-index: -1;
+          transition: all 0.3s; }
+      footer.footer .navbar-menu .navbar-item .icon {
+        margin-left: 0.3125rem; }
+
+#about {
+  background: linear-gradient(rgba(9, 4, 70, 0.9), rgba(9, 4, 70, 0.7)), url("../assets/jw_back.jpg") no-repeat center;
+  background-size: cover;
+  color: #FDFFFC; }
+  #about h1, #about h3, #about h4 {
+    color: #FDFFFC; }
+  #about h4 {
+    font-style: italic; }
+  #about a {
+    color: #F71735;
+    font-weight: bold; }
+    #about a:hover {
+      color: #FDFFFC;
+      text-decoration: underline #F71735;
+      transition: 300ms ease all; }
+
+#portfolio .tile.is-child {
+  box-shadow: 1px 2px 10px rgba(7, 1, 2, 0.1), 2px 1px 5px 0px rgba(9, 4, 70, 0.1); }
+
+#contact {
+  background: linear-gradient(rgba(9, 4, 70, 0.9), rgba(9, 4, 70, 0.7));
+  color: #FDFFFC; }
+  #contact h1, #contact strong, #contact label {
+    color: #FDFFFC; }
