add new photo, fix typos, change gradient

--- a/src/styles/_pages.scss
+++ b/src/styles/_pages.scss
@@ -5,7 +5,7 @@
 }
 
 #about {
-  background: linear-gradient(rgba($blue, 0.9), rgba($blue, 0.7)), url("../assets/jw_back.jpg") no-repeat center;
+  background: linear-gradient(rgba($blue, 0.9), rgba($blue, 0.7)), url("../assets/vixen_jw_stiffarm.jpg") no-repeat center;
   background-size: cover;
   color: $white;
   h1, h3, h4 {
@@ -27,24 +27,29 @@
 }
 
 #portfolio {
-  .tile.is-child {
-    box-shadow: 1px 2px 10px rgba($black, 0.1), 2px 1px 5px 0px rgba($blue, 0.1);
-  }
-
+  background: linear-gradient(rgba($white, 0.9), rgba($white, 0.7)), url("../assets/jw_back.jpg") no-repeat center;
+  background-size: cover;
   a {
     font-weight: bold;
-    padding: rem(5px 8px);
     text-decoration: none;
-    &:hover {
-      color: rgba($white, 0.8);
-      font-style: italic;
-      transition: 700ms ease all;
+  }
+  .tile {
+    &.is-child {
+      box-shadow: 1px 2px 10px rgba($black, 0.1), 2px 1px 5px 0px rgba($blue, 0.1);
+    }
+    a {
+      padding: rem(5px 8px);
+      &:hover {
+        color: rgba($white, 0.8);
+        font-style: italic;
+        transition: 700ms ease all;
+      }
     }
   }
 }
 
 #contact {
-  background: linear-gradient(rgba($blue, 0.9), rgba($blue, 0.7));
+  background-image: linear-gradient(to bottom, #090446, #14154b, #20224e, #2c2e51, #383b53);
   color: $white;
   h1, strong, label {
     color: $white;
